--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "materialize-css": "^1.0.0-rc.2",
+    "vue": "^2.6.11",
+    "vue-material": "^1.0.0-beta-14",
+    "vue-material-design-icons": "^4.7.1",
+    "vue-router": "^3.3.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
